WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188375
[WPE][GTK] Handle some virtual keys commonly used on TVs
https://bugs.webkit.org/show_bug.cgi?id=188375
Summary
[WPE][GTK] Handle some virtual keys commonly used on TVs
Carlos Garcia Campos
Reported
2018-08-07 01:57:54 PDT
In PlatformKeyboardEvent
Attachments
Patch
(18.49 KB, patch)
2018-08-07 02:00 PDT
,
Carlos Garcia Campos
zan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2018-08-07 02:00:12 PDT
Created
attachment 346697
[details]
Patch
EWS Watchlist
Comment 2
2018-08-07 02:02:11 PDT
Attachment 346697
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/gtk/PlatformKeyboardEventGtk.cpp:884: A case label should not be indented, but line up with its switch statement. [whitespace/indent] [4] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Carlos Garcia Campos
Comment 3
2018-08-07 02:41:06 PDT
Committed
r234645
: <
https://trac.webkit.org/changeset/234645
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug