[WPE][GTK] Handle some virtual keys commonly used on TVs https://bugs.webkit.org/show_bug.cgi?id=188375

Reviewed by Žan Doberšek.

* platform/gtk/PlatformKeyboardEventGtk.cpp:
(WebCore::PlatformKeyboardEvent::keyValueForGdkKeyCode):
(WebCore::PlatformKeyboardEvent::windowsKeyCodeForGdkKeyCode):
* platform/wpe/PlatformKeyboardEventWPE.cpp:
(WebCore::PlatformKeyboardEvent::keyValueForWPEKeyCode):
(WebCore::PlatformKeyboardEvent::windowsKeyCodeForWPEKeyCode):

Canonical link: https://commits.webkit.org/203479@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234645 268f45cc-cd09-0410-ab3c-d52691b4dbfc